jmscott-API/k8s/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: mongo
spec:
 selector:
  matchLabels:
   app: mongo
 serviceName: "mongo"
 replicas: 3
 template:
   metadata:
     labels:
       app: mongo
       #role: mongo
       #environment: test
   spec:
     terminationGracePeriodSeconds: 10
     containers:
       - name: mongo
         image: mongo
         command:
           - mongod
           - "--replSet"
           - rs0
           - "--smallfiles"
           - "--noprealloc"
         ports:
           - containerPort: 27017
         volumeMounts:
           - name: mongo-persistent-storage
             mountPath: /data/db
       - name: mongo-sidecar
         image: cvallance/mongo-k8s-sidecar
 volumeClaimTemplates:
 - metadata:
     name: mongo-persistent-storage
     annotations:
       volume.beta.kubernetes.io/storage-class: "standard"
   spec:
     accessModes: [ "ReadWriteOnce" ]
     resources:
       requests:
         storage: 200Mi
