jmscott-API/k8s/deployment.yaml
# Keys and passwords are pulled from a k8s secret, then exported as environment variables. Those
# env vars are pulled in application.properties in the java project and passed to the mongo connection attributes.

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jmscott-api
  name: jmscott-api
  namespace: default
spec:
  replicas: 2
  minReadySeconds: 50
  selector:
    matchLabels:
      app: jmscott-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jmscott-api
    spec:
      containers:
      - image: zoolian/jmscott-api:0.1.3.RELEASE
        imagePullPolicy: Always
        name: jmscott-api
        ports:
        - name: liveness-port
          containerPort: 8080
        volumeMounts:
          - name: config-volume
            mountPath: /workspace/config
        # resources:
        #   requests:
        #     cpu: 100m
        #     memory: 65Mi
        #   limits:
        #     cpu: 150m
        #     memory: 512Mi
        readinessProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 5
          periodSeconds: 10
          initialDelaySeconds: 60
        livenessProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 5
          periodSeconds: 10
          initialDelaySeconds: 60
      volumes:
        - name: config-volume
          configMap:
            name: jmscott-api-configmap
      restartPolicy: Always
      terminationGracePeriodSeconds: 30 #increase if pod takes longer than this to shut down
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jmscott-api
  name: jmscott-api-svc
  namespace: default
spec:
  ports:
  #- nodePort: 30567
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: jmscott-api
  sessionAffinity: ClientIP #Web app has sessions. Subsequent requests need to hit the same pod.
  #type: ClusterIP
