jmscott-API/k8s/mongodb-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  labels:
    app: mongodb
spec:
  #type: ClusterIP
  selector:
    app: mongodb
  ports:
  - port: 27017 # exposed
    protocol: TCP
    targetPort: 27017 # inside.  containerPort.
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-statefulset
  labels:
    app: mongodb
spec:
  serviceName: mongodb-svc
  replicas: 2
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: "/data/db"
          name: mongo-pd
        resources:
          requests:
            cpu: 80m
      - name: mongo-sidecar
        image: morphy/k8s-mongo-sidecar
        resources:
          requests:
            cpu: 20m
  volumeClaimTemplates:
  - metadata:
      name: mongo-pd
    spec:
      storageClassName: mongo-volume
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Mi
